# co-pilot-mind

./: .gitignore  README.md  pyproject.toml  requirements.txt
NPL/: script.ipynb
capture/: main.py  record_mode.py
capture/audioAquisition/: recorder.py
capture/audio_data/Piloto_1/Warmap_Evento/ComEvento (mic)/mic/: Warmap_Evento_metadata.json
capture/audio_data/Ramon/paperAcquisition/SemEvento (mic)/mic/: paperAcquisition_metadata.json
capture/audio_data/gabrielBruxao/teste/semEvento (mic)/mic/: teste_metadata.json
config/: record_config.json  trialData.env
data/temp/: sod_gru_mixed_transcription_with_base_model.json
data/transcriptions/ramon/1/: paperAcquisition_mixed_transcription.json
data/transcriptions/temp/multi/: sod-gru_mixed_transcription_with_base_model_multi.json  sod-gru_mixed_transcription_with_large_model_multi.json  sod-gru_mixed_transcription_with_medium_model_multi.json  sod-gru_mixed_transcription_with_small_model_multi.json  sod-gru_mixed_transcription_with_turbo_model_multi.json
data/transcriptions/temp/pt/: sod_gru_mixed_transcription_with_large_model_pt.json  sod_gru_mixed_transcription_with_medium_model_pt.json  sod_gru_mixed_transcription_with_small_model_pt.json  sod_gru_mixed_transcription_with_turbo_model_pt.json
data/youtube_wav/: 103 KM DE JATO_ SOROCABA-GUARULHOS  [EMBRAER PHENOM 300E].pt.vtt  103 KM DE JATO_ SOROCABA-GUARULHOS  [EMBRAER PHENOM 300E]_with_timestamps.txt
transcription/: annotations.md  main.py  transcriber.py
transcription/kaldi_transcriber/: transcriber.py
transcription/whisper_transcriber/: transcriber.py
youtubeDownloader/: downloader.py  main.py
